# wow-ocr

./: README.md  main.py  pyproject.toml  setup.cfg
wow_ocr/: __init__.py  detector.py  pipeline.py  recognizer.py  tools.py
